my homepage and project 1 projects

--- a/project_1/contact.html
+++ b/project_1/contact.html
@@ -25,7 +25,7 @@
 
         <h2><br>Please Contact Us : 518-587-2990</h2>
         <h2>Or By E-Mail : mail@oldebryaninn.com</h2>
-        <img src = "assets/media/enews_cta.jpg" width = 100%>
+        <img src = "assets/media/enews_cta.jpg" alt = "Fireplace" width = 100%>
         <footer>
             2021 RIT Web and Mobile 1 Project 1 Author: Avery Belanger
         </footer>
