--- a/project_1/details.html
+++ b/project_1/details.html
@@ -29,7 +29,7 @@
         </p>
         <p>Sunday, Wednesday, Thursday, Friday, Saturday: 12pm-8:30pm</p>
         <p>Monday, Tuesday: Closed</p>
-        <img src = "assets/media/olde_location.png" width = 100%>
+        <img src = "assets/media/olde_location.png" alt="location" width = 100%>
         <footer>
             2021 RIT Web and Mobile 1 Project 1 Author: Avery Belanger
         </footer>
