--- a/project_1/index.html
+++ b/project_1/index.html
@@ -21,8 +21,8 @@
                 Contact Info
             </a>
         </nav>
-        <img src="assets/media/old_bryan_inn_bright.jpg", width = 100%>
-        <img class = "floatleft" src="assets/media/beermug-1.png">
+        <img src="assets/media/old_bryan_inn_bright.jpg" alt="Olde Bryan Inn" width = 100%>
+        <img class = "floatleft" src="assets/media/beermug-1.png" alt="Beer Mug">
         <h2>Olde Bryan Inn: Restaurant, Tavern & Catering in Saratoga Springs, NY</h2>
         <p>There’s a special energy here: A tradition of celebration that began in 1773 and continues today. You can feel it in the warmth of our historic dining rooms and see it in the friendly smiles of our staff. You can taste it in our thoughtfully prepared menus and cheerfully prepared special orders. You can hear it in the contented murmur of good conversation and the hustle and bustle of our tavern.
 
