--- a/my_homepage/index.html
+++ b/my_homepage/index.html
@@ -35,7 +35,7 @@
         <ol>
             <li><a href = "http://solace.ist.rit.edu/~ajb7987/140/project1/index.html">Restraunt Home Page</a></li>
         </ol>
-
+        <div class="first-media-query">My First Media Query</div>
 
     </body>
 </html>
