Project 2 css started

--- a/Project2/project2/charges.html
+++ b/Project2/project2/charges.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-<a href="index.html">What happened</a>
-<a href="about.html">Who are they</a>
-<a href="charges.html">Charges</a>
-<a href="motivation.html">Motivation</a>
-<a href="whatLearned.html">What can be learned</a>
-<a href="payload.html">Payload</a>
-<a href="references.html">References</a>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+        <link rel="stylesheet" href="media/styles/styles.css">
+    </head>
+    <body>
+        <div class="grid-container">
+            <nav class="item-1">
+                <a href="index.html">What happened</a>
+                <a href="about.html">Who are they</a>
+                <a href="charges.html">Charges</a>
+                <a href="motivation.html">Motivation</a>
+                <a href="whatLearned.html">What can be learned</a>
+                <a href="payload.html">Payload</a>
+                <a href="references.html">References</a>
 
-<h1>Charges</h1>
-<p>On October 9th 2021,  Jonathan Toebbe and his wife Diana Toebbe were placed under arrest on the charge of “Conspiracy to Communicate Restricted Data” and two accounts of “Communication of Restricted Data.”  The Toebbe’s were not allowed to go on bail due to their alleged efforts to leave the country including packed bags full of money and cryptocurrency information.  They had their first court date on the 12th of October where they pleaded not guilty and if they are proven guilty,  they will both serve life sentences.  This case has not been resolved.  The Rebbe's are still innocent until proven guilty.</p>
-</body>
+            </nav>
+            <div class="item-2">
+                <h1>Charges</h1>
+                <img src="media/images/courtroom-sketch-johnathan-toebbe.jpg" title="courtroom sketch of Johnathan Toebbe">
+                <p>On October 9th 2021,  Jonathan Toebbe and his wife Diana Toebbe were placed under arrest on the charge of “Conspiracy to Communicate Restricted Data” and two accounts of “Communication of Restricted Data.”  The Toebbe’s were not allowed to go on bail due to their alleged efforts to leave the country including packed bags full of money and cryptocurrency information.  They had their first court date on the 12th of October where they pleaded not guilty and if they are proven guilty,  they will both serve life sentences.  This case has not been resolved.  The Rebbe's are still innocent until proven guilty.</p>
+            </div>
+        </div>
+    </body>
 </html>
