Project 2 css almost done

--- a/Project2/project2/whatLearned.html
+++ b/Project2/project2/whatLearned.html
@@ -6,19 +6,20 @@
         <link rel="stylesheet" href="media/styles/styles.css">
     </head>
     <body>
-        <nav>
-            <a href="index.html">What happened</a>
-            <a href="about.html">Who are they</a>
-            <a href="charges.html">Charges</a>
-            <a href="motivation.html">Motivation</a>
-            <a href="whatLearned.html">What can be learned</a>
-            <a href="payload.html">Payload</a>
-            <a href="references.html">References</a>
-        </nav>
+        <div>
+            <nav>
+                <a href="index.html">What happened</a>
+                <a href="about.html">Who are they</a>
+                <a href="charges.html">Charges</a>
+                <a href="motivation.html">Motivation</a>
+                <a href="whatLearned.html">What can be learned</a>
+                <a href="payload.html">Payload</a>
+                <a href="references.html">References</a>
+            </nav>
 
-        <h1>What to learn</h1>
-        <p>Jonathan and Diana Toebbe were informed of the consequences of selling information to others that was not theirs to sell.  They paid the price for selling the information and have abandoned everything and everyone in their pursuit assuming they were the ones who did it.  Some things to learn from this is that no matter how well you do something illegal, you are never safe from the government.  Trust that your country is doing the right thing and don’t go to extremes like this.  There is always a better way to fix a problem than breaking the law.</p>
+            <h1>What to learn</h1>
+            <p>Jonathan and Diana Toebbe were informed of the consequences of selling information to others that was not theirs to sell.  They paid the price for selling the information and have abandoned everything and everyone in their pursuit assuming they were the ones who did it.  Some things to learn from this is that no matter how well you do something illegal, you are never safe from the government.  Trust that your country is doing the right thing and don’t go to extremes like this.  There is always a better way to fix a problem than breaking the law.</p>
 
-
+        </div>
     </body>
 </html>
