--- a/Project2/project2/references.html
+++ b/Project2/project2/references.html
@@ -6,29 +6,36 @@
         <link rel="stylesheet" href="media/styles/styles.css">
     </head>
     <body>
-        <nav>
-            <a href="index.html">What happened</a>
-            <a href="about.html">Who are they</a>
-            <a href="charges.html">Charges</a>
-            <a href="motivation.html">Motivation</a>
-            <a href="whatLearned.html">What can be learned</a>
-            <a href="payload.html">Payload</a>
-            <a href="references.html">References</a>
-        </nav>
-        <h1>References</h1>
-        <ol>
-            <li>Maryland nuclear engineer and spouse arrested on espionage-related charges. The United States Department of Justice. (2021, October 10). Retrieved October 27, 2021, from https://www.justice.gov/opa/pr/maryland-nuclear-engineer-and-spouse-arrested-espionage-related-charges. </li>
-            <li>Johnson, K. (2021, October 20). FBI: Navy Engineer, wife sought $5 million, had 'go bag' packed in nuclear submarine espionage case. USA Today. Retrieved October 27, 2021, from https://www.usatoday.com/story/news/politics/2021/10/20/jonathan-toebbe-navy-engineer-wife-diana-wanted-5-m-us-secrets/8538999002/.</li>
-            <li>Barnes, J. E., & Daemmrich, J. (2021, October 19). Couple in submarine spy case stewed over money and politics. The New York Times. Retrieved October 27, 2021, from https://www.nytimes.com/2021/10/19/us/politics/jonathan-toebbe-diana-submarine.html.</li>
-            <li>Kaplan, F. (2021, October 18). The pathetic details at the heart of the suburban couple spy case. Slate Magazine. Retrieved October 27, 2021, from https://slate.com/news-and-politics/2021/10/jonathan-diana-toebbe-spy-trial-espionage.html.</li>
-            <li>Guardian News and Media. (2021, October 17). Spies next door? the suburban us couple accused of espionage. The Guardian. Retrieved October 27, 2021, from https://www.theguardian.com/us-news/2021/oct/17/jonathan-diana-toebbe-west-virginia-couple-accused-spies. </li>
-            <li>Maryland Nuclear Engineer and his wife indicted on national security charges. The United States Department of Justice. (2021, October 19). Retrieved October 27, 2021, from https://www.justice.gov/usao-ndwv/pr/maryland-nuclear-engineer-and-his-wife-indicted-national-security-charges. </li>
-            <li>22 Oct 2021 Associated Press. (2021, October 22). Woman charged in submarine spy case to remain locked up. Military.com. Retrieved October 27, 2021, from https://www.military.com/daily-news/2021/10/22/woman-charged-submarine-spy-case-remain-locked.html.</li>
-            <li>Wan, W., & Shapira, I. (2021, October 21). The accused spy knew stealth was crucial from his work on submarines. he surfaced anyway. The Washington Post. Retrieved October 27, 2021, from https://www.washingtonpost.com/dc-md-va/2021/10/20/toebbe-spy-couple-submarine-annapolis/. </li>
-            <li>Person, &amp; Wolfe, J. (2021, October 20). U.S. naval engineer charged with submarine espionage to remain in jail. Reuters. Retrieved November 6, 2021, from https://www.reuters.com/world/us/us-naval-nuclear-engineer-wife-due-court-espionage-charges-2021-10-20/. </li>
-            <li>Cannon, M. (2021, October 11). U.S. Nuclear Engineer and wife sold secrets about submarines, FBI says. Newsweek. Retrieved November 6, 2021, from https://www.newsweek.com/who-jonathan-toebbe-navy-engineer-accused-selling-nuclear-submarine-secrets-1637508. </li>
-            <li>Rubin, L. (2021, October 13). Couple accused of espionage appear in Federal Court in West Virginia. WCHS. Retrieved November 6, 2021, from https://wchstv.com/news/local/couple-accused-of-espionage-appear-in-federal-court-in-west-virginia. </li>
-            <li>Sutton, H. I. (2021, August 16). U.S. Navy's Virginia class submarines to get 76% more firepower. Naval News. Retrieved November 6, 2021, from https://www.navalnews.com/naval-news/2021/07/us-navys-virginia-class-submarines-get-more-tomahawk-missiles/. </li>
-        </ol>
+        <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
+        <div class = "grid-container">
+            <nav class = "item-1">
+                <a href="index.html">What happened</a>
+                <a href="about.html">Who are they</a>
+                <a href="charges.html">Charges</a>
+                <a href="motivation.html">Motivation</a>
+                <a href="whatLearned.html">What can be learned</a>
+                <a href="payload.html">Payload</a>
+                <a href="references.html">References</a>
+            </nav>
+            <div class = "item-2">
+                <h2>References</h2>
+                <ol>
+                    <li>Maryland nuclear engineer and spouse arrested on espionage-related charges. The United States Department of Justice. (2021, October 10). Retrieved October 27, 2021, from https://www.justice.gov/opa/pr/maryland-nuclear-engineer-and-spouse-arrested-espionage-related-charges. </li>
+                    <li>Johnson, K. (2021, October 20). FBI: Navy Engineer, wife sought $5 million, had 'go bag' packed in nuclear submarine espionage case. USA Today. Retrieved October 27, 2021, from https://www.usatoday.com/story/news/politics/2021/10/20/jonathan-toebbe-navy-engineer-wife-diana-wanted-5-m-us-secrets/8538999002/.</li>
+                    <li>Barnes, J. E., & Daemmrich, J. (2021, October 19). Couple in submarine spy case stewed over money and politics. The New York Times. Retrieved October 27, 2021, from https://www.nytimes.com/2021/10/19/us/politics/jonathan-toebbe-diana-submarine.html.</li>
+                    <li>Kaplan, F. (2021, October 18). The pathetic details at the heart of the suburban couple spy case. Slate Magazine. Retrieved October 27, 2021, from https://slate.com/news-and-politics/2021/10/jonathan-diana-toebbe-spy-trial-espionage.html.</li>
+                    <li>Guardian News and Media. (2021, October 17). Spies next door? the suburban us couple accused of espionage. The Guardian. Retrieved October 27, 2021, from https://www.theguardian.com/us-news/2021/oct/17/jonathan-diana-toebbe-west-virginia-couple-accused-spies. </li>
+                    <li>Maryland Nuclear Engineer and his wife indicted on national security charges. The United States Department of Justice. (2021, October 19). Retrieved October 27, 2021, from https://www.justice.gov/usao-ndwv/pr/maryland-nuclear-engineer-and-his-wife-indicted-national-security-charges. </li>
+                    <li>22 Oct 2021 Associated Press. (2021, October 22). Woman charged in submarine spy case to remain locked up. Military.com. Retrieved October 27, 2021, from https://www.military.com/daily-news/2021/10/22/woman-charged-submarine-spy-case-remain-locked.html.</li>
+                    <li>Wan, W., & Shapira, I. (2021, October 21). The accused spy knew stealth was crucial from his work on submarines. he surfaced anyway. The Washington Post. Retrieved October 27, 2021, from https://www.washingtonpost.com/dc-md-va/2021/10/20/toebbe-spy-couple-submarine-annapolis/. </li>
+                    <li>Person, &amp; Wolfe, J. (2021, October 20). U.S. naval engineer charged with submarine espionage to remain in jail. Reuters. Retrieved November 6, 2021, from https://www.reuters.com/world/us/us-naval-nuclear-engineer-wife-due-court-espionage-charges-2021-10-20/. </li>
+                    <li>Cannon, M. (2021, October 11). U.S. Nuclear Engineer and wife sold secrets about submarines, FBI says. Newsweek. Retrieved November 6, 2021, from https://www.newsweek.com/who-jonathan-toebbe-navy-engineer-accused-selling-nuclear-submarine-secrets-1637508. </li>
+                    <li>Rubin, L. (2021, October 13). Couple accused of espionage appear in Federal Court in West Virginia. WCHS. Retrieved November 6, 2021, from https://wchstv.com/news/local/couple-accused-of-espionage-appear-in-federal-court-in-west-virginia. </li>
+                    <li>Sutton, H. I. (2021, August 16). U.S. Navy's Virginia class submarines to get 76% more firepower. Naval News. Retrieved November 6, 2021, from https://www.navalnews.com/naval-news/2021/07/us-navys-virginia-class-submarines-get-more-tomahawk-missiles/. </li>
+                    <li>Trick handcuffs Jay Leslie Super escape cuff. The House of Enchantment. (n.d.). Retrieved November 7, 2021, from https://www.thehouseofenchantment.com/product/trick-handcuffs-jay-leslie-super-escape-cuff/. </li>
+                </ol>
+            </div>
+        </div>
+        <footer>Published by Avery Belanger: 11/6/2021</footer>
     </body>
 </html>
