--- a/Project2/project2/charges.html
+++ b/Project2/project2/charges.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="media/styles/styles.css">
     </head>
     <body>
+        <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
         <div class="grid-container">
             <nav class="item-1">
                 <a href="index.html">What happened</a>
@@ -18,10 +19,11 @@
 
             </nav>
             <div class="item-2">
-                <h1>Charges</h1>
+                <h2>Charges</h2>
                 <img src="media/images/courtroom-sketch-johnathan-toebbe.jpg" title="courtroom sketch of Johnathan Toebbe">
                 <p>On October 9th 2021,  Jonathan Toebbe and his wife Diana Toebbe were placed under arrest on the charge of “Conspiracy to Communicate Restricted Data” and two accounts of “Communication of Restricted Data.”  The Toebbe’s were not allowed to go on bail due to their alleged efforts to leave the country including packed bags full of money and cryptocurrency information.  They had their first court date on the 12th of October where they pleaded not guilty and if they are proven guilty,  they will both serve life sentences.  This case has not been resolved.  The Rebbe's are still innocent until proven guilty.</p>
             </div>
         </div>
+        <footer>Published by Avery Belanger: 11/6/2021</footer>
     </body>
 </html>
