--- a/Project2/project2/motivation.html
+++ b/Project2/project2/motivation.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="media/styles/styles.css">
     </head>
     <body>
+    <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
         <div class="grid-container">
             <nav class="item-1">
                 <a href="index.html">What happened</a>
@@ -17,10 +18,11 @@
                 <a href="references.html">References</a>
             </nav>
             <div class ="item-2">
-                <h1>Motivation</h1>
+                <h2>Motivation</h2>
                 <img src = "media/images/courtroom-sketch-diana-toebbe.jpg" title="courtroom sketch of Diana Toebbe">
                 <p>It isn’t known what the factors were in this case but it is believed that it could have been for money or for political reasons.  Money could have been a factor.  The family has had financial problems in the past.  They were hit hard when housing prices significantly dropped in 2008 and had to sell their house.  Since they were  forced to sell their house, they sold it at a very low price causing them to lose a significant amount of wealth.  Jonathan then in 2012 switched careers and joined the navy and there he began working with naval reactors.  He worked there after leaving the navy until he was arrested.  The fact that Mr. Toebbe was being paid over $200,000 at the time of this happening rules out the possibility that the family needed money to survive.  It could have been the pursuit of more money because the final offer was for $5,000,000.  There is also the possibility that it could have been for political reasons due to Mrs. Toebbe being overly political in her classroom.  She expressed her anger toward the Trump Presidency and the effects it had on America.  But it also must be noted that this exchange of information continued well into the Biden administration.</p>
             </div>
         </div>
+    <footer>Published by Avery Belanger: 11/6/2021</footer>
     </body>
 </html>
