--- a/Project2/project2/references.html
+++ b/Project2/project2/references.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <link rel="stylesheet" href="media/styles/styles.css">
+        <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
         <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
