--- a/Project2/project2/whatLearned.html
+++ b/Project2/project2/whatLearned.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <link rel="stylesheet" href="media/styles/styles.css">
+        <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
         <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
@@ -19,7 +19,7 @@
             </nav>
             <div class = "item-2">
                 <h2>What to learn</h2>
-                <img src="media/images/handcuffs.jpg" title = "handcuffs">
+                <img src="assets/media/handcuffs.jpg" title = "handcuffs">
                 <p>Jonathan and Diana Toebbe were informed of the consequences of selling information to others that was not theirs to sell.  They paid the price for selling the information and have abandoned everything and everyone in their pursuit assuming they were the ones who did it.  Some things to learn from this is that no matter how well you do something illegal, you are never safe from the government.  Trust that your country is doing the right thing and don’t go to extremes like this.  There is always a better way to fix a problem than breaking the law.</p>
             </div>
         </div>
