--- a/Project2/project2/about.html
+++ b/Project2/project2/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <link rel="stylesheet" href="media/styles/styles.css">
+        <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
         <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
@@ -19,7 +19,7 @@
             </nav>
             <div class="item-2">
                 <h2>Who are they</h2>
-                <img src="media/images/jonathan-toebbe-diana-toebbe.jpg" title="Jonathan and Diana Toebbe">
+                <img src="assets/media/jonathan-toebbe-diana-toebbe.jpg" title="Jonathan and Diana Toebbe">
                 <p>Johnathan and Diana Toebbe are a married couple who have 2 children.  Mr. Toebbe was pursuing a PHD when the financial crisis hit the family and resorted to joining the navy leading him to a job with naval reactors.  Mrs Toebbe was a kindergarten teacher.  They both participated in the act of selling a country classified information because Mr. Toebbe did the negotiations and communication while Mrs. Toebbe was a lookout to make sure the government was not tracking them.  They both were planning on escaping the country with their whole family after they had made this deal but were stopped by the FBI.  Their children are being taken care of by extended family currently.</p>
             </div>
         </div>
