--- a/Project2/project2/index.html
+++ b/Project2/project2/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <link rel="stylesheet" href="media/styles/styles.css">
+        <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
         <h1>Report on Johanathan and Diana Toebbe's Espionage</h1>
@@ -19,7 +19,7 @@
             </nav>
             <div class = "item-2">
                 <h2>What happened</h2>
-                <img src="media/images/arrested.jpg" title="Arrested image of Johnathan Toebbe and Diana Toebbe">
+                <img src="assets/media/arrested.jpg" title="Arrested image of Johnathan Toebbe and Diana Toebbe">
                 <p>Jonathan Toebbe was an employee for the government through the Naval Nuclear Propulsion Program also known as naval reactors.  On the 1st of April 2020,  Mr. Toebbe sent a package to a country containing data to communicate classified information.  This country then contacted the US to inform them on what was happening and placed a FBI agent to continue working with Mr. Toebbe to see how far he would go.  He contacted this FBI agent thinking he was someone from the country to inform him about the drop off location and a money agreement.  They agreed that the payment would be through cryptocurrency and not through banking information due to the ease of tracing the money back when done through a bank.  The FBI agent sent $10,000 as a “good faith” payment to make sure he dropped the information off.  He then dropped off a SD card containing encrypted classified information.  The FBI agent then sent a payment of $20,000 to him in exchange for the decryption key.  He then made another drop off with an SD card and asked for $70,000 for the decryption key.  The FBI agent agreed and sent him the money in cryptocurrency for the decryption key revealing classified information.  He then made a 3rd drop off and was arrested on the spot because they asked for $5,000,000.</p>
             </div>
         </div>
