--- a/Project2/project2/motivation.html
+++ b/Project2/project2/motivation.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Motivation</title>
         <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
