--- a/Project2/project2/whatLearned.html
+++ b/Project2/project2/whatLearned.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Learned</title>
         <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
